# Getting_started_with_RAG

./: .gitignore  CLAUDE.md  README.md  SYNC.md  implementation_plan.md
backend/: main.py  pyproject.toml  requirements.txt
backend/api/v1/: chunk.py  embed.py  ingest.py  query.py
backend/db/: database.py
backend/services/: chunking.py  embedding.py  ingestion.py  retrieval.py
backend/tests/: sample.txt  test_chunk_endpoint.py  test_embed_endpoint.py  test_query_endpoint.py
docs/decisions/: chunking_strategy.md  embedding_model.md  llm_serving.md  reranking.md  vector_store.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/retrieval/: page.tsx
frontend/components/: Nav.tsx
frontend/components/ingestion/: ChunkBrick.tsx  ExtractionModule.tsx  InteractiveSlicer.tsx  PersistenceModule.tsx  VectorEmbeddingModule.tsx
frontend/components/retrieval/: AugmentationXRayModule.tsx  QueryAnalysisModule.tsx  ScoringRerankModule.tsx  VectorAtlasModule.tsx
frontend/lib/: api.ts  hash.ts
frontend/store/: pipeline.ts
